--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,4 +11,4 @@ issuehunt: # Replace with a single IssueHunt username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
-custom: ['https://www.paypal.com/paypalme/iglinkin', 'ton://transfer/UQD23Yr2HRVAWwLWvEVv5qErKh87d0b-7MJF8kAp1svzIc7I'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: https://www.paypal.com/paypalme/iglinkin # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
