--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
         with:
-          args: "format --check $(find . -type f -name '*.py')"
+          args: 'format --check'
