--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
         with:
-          args: '--select E,F,N,D,UP,PYI,SLOT,SIM,TD,FIX,W,PL --ignore E501 --respect-gitignore'
+          args: 'format --check --config ruff.toml'
