--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
         with:
-          args: 'format --check --config ruff.toml'
+          args: 'check --config ruff.toml'
