--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,20 +1,34 @@
 name: CI check
+
 on:
   issue_comment:
     types: [created]
+  pull_request_target:
+    branches: [ main ]
+    paths:
+      - '**.py'
+  workflow_dispatch:
+
+concurrency:
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+  cancel-in-progress: true
 
 jobs:
-  ruff:
+  ruff-linter:
     if: >-
-      github.event.issue.pull_request != '' &&
+      github.event_name == 'pull_request_target' ||
+      (github.event_name == 'issue_comment' && github.event.issue.pull_request != null && 
       contains(github.event.comment.body, '/run_ci') &&
-      contains(vars.ALLOW_CI_TRIGGER, github.event.comment.user.login)
+      contains(vars.ALLOW_CI_TRIGGER, github.event.comment.user.login))
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
         with:
+          persist-credentials: false
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.head_ref }}
       - uses: chartboost/ruff-action@v1
         with:
           args: 'check --config ruff.toml --diff'
