--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,8 @@
 name: CI check
 
 on:
-  issue_comment:
-    types: [created]
   pull_request_target:
-    branches: [ main ]
+    branches: [main]
     paths:
       - '**.py'
   workflow_dispatch:
@@ -15,11 +13,6 @@ concurrency:
 
 jobs:
   ruff-linter:
-    if: >-
-      github.event_name == 'pull_request_target' ||
-      (github.event_name == 'issue_comment' && github.event.issue.pull_request != null && 
-      contains(github.event.comment.body, '/run_ci') &&
-      contains(vars.ALLOW_CI_TRIGGER, github.event.comment.user.login))
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -27,8 +20,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-          repository: ${{ github.event.issue.pull_request.head.repo.full_name || github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.issue.pull_request.head.ref || github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - uses: chartboost/ruff-action@v1
         with:
           args: 'check --config ruff.toml --diff'
